--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
   <!-- navbar -->
   <div class="navigation w-100">
     <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-dark p-0">
+      <nav class="navbar navbar-expand-lg navbar-dark p-0" style="background: #1a1a37;">
         <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="220" alt="logo"></a>
         <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navigation"
           aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -241,7 +241,10 @@
 <section class="section">
   <div class="container">
     <div class="row">
-      <div class="col-12">
+      <div class="col-5">
+        <img class="img-fluid w-100 mb-4" src="images/about_1.png" alt="about image">
+      </div>
+      <div class="col-7">
         <!-- <img class="img-fluid w-100 mb-4" src="images/about/about.png" alt="about image"> -->
         <h2 class="section-title">Absolute Marble & Granite Corp</h2>
         <p>We are one of the fastest-growing providers of fabrication and installation of stone materials in South Jersey. We take pride in our amazing price points, speedy fabrication and installation timeframes. These offerings, combined with our first-class customer service, create an unmatched experience for all our customers and partners.</p>
@@ -284,54 +287,71 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+      <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
         <div class="member">
-          <img src="images/teams/1.jpg" alt="">
-          <h4>Walter White</h4>
-          <span>Chief Executive Officer</span>
+          <!-- <img src="images/teams/1.jpg" alt=""> -->
+          <h4>Sarah</h4>
+          <!-- <span>Chief Executive Officer</span> -->
           <p>
-            Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut
+            I absolutely love my granite! Everything about your process and service was fantastic! I would definitely recommend you to anyone looking for Granite, Marble or Tile.
           </p>
-          <div class="social">
+          <!-- <div class="social">
             <a href="" style="margin: 0 3px;"><i class="ti-facebook text-primary"></i></a>
             <a href="" style="margin: 0 3px;"><i class="ti-twitter text-primary"></i></a>
             <a href="" style="margin: 0 3px;"><i class="ti-instagram text-primary"></i></a>
             <a href="" style="margin: 0 3px;"><i class="ti-linkedin text-primary"></i></a>
-          </div>
+          </div> -->
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+      <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
         <div class="member">
-          <img src="images/teams/2.jpg" alt="">
-          <h4>Sarah Jhinson</h4>
-          <span>Product Manager</span>
+          <!-- <img src="images/teams/2.jpg" alt=""> -->
+          <h4>Barbara</h4>
+          <!-- <span>Product Manager</span> -->
           <p>
-            Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus
+            I absolutely love my granite! Everything about your process and service was fantastic! I would definitely recommend you to anyone looking for Granite, Marble or Tile.
           </p>
-          <div class="social">
+          <!-- <div class="social">
             <a href="" style="margin: 0 3px;"><i class="ti-facebook text-primary"></i></a>
             <a href="" style="margin: 0 3px;"><i class="ti-twitter text-primary"></i></a>
             <a href="" style="margin: 0 3px;"><i class="ti-instagram text-primary"></i></a>
             <a href="" style="margin: 0 3px;"><i class="ti-linkedin text-primary"></i></a>
-          </div>
+          </div> -->
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+      <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
         <div class="member">
-          <img src="images/teams/3.jpg" alt="">
-          <h4>William Anderson</h4>
-          <span>CTO</span>
+          <!-- <img src="images/teams/3.jpg" alt=""> -->
+          <h4>Victoria</h4>
+          <!-- <span>CTO</span> -->
           <p>
-            Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
+            The granite was fabricated without a flaw. Workers were neat and productive in the installation. Everything is wonderful.
           </p>
-          <div class="social">
+          <!-- <div class="social">
             <a href="" style="margin: 0 3px;"><i class="ti-facebook text-primary"></i></a>
             <a href="" style="margin: 0 3px;"><i class="ti-twitter text-primary"></i></a>
             <a href="" style="margin: 0 3px;"><i class="ti-instagram text-primary"></i></a>
             <a href="" style="margin: 0 3px;"><i class="ti-linkedin text-primary"></i></a>
-          </div>
+          </div> -->
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+        <div class="member">
+          <!-- <img src="images/teams/3.jpg" alt=""> -->
+          <h4>John</h4>
+          <!-- <span>CTO</span> -->
+          <p>
+            Very impressive. Great staff. Knowledgeable. Super selection. No need to go anyplace else!
+          </p>
+          <!-- <div class="social">
+            <a href="" style="margin: 0 3px;"><i class="ti-facebook text-primary"></i></a>
+            <a href="" style="margin: 0 3px;"><i class="ti-twitter text-primary"></i></a>
+            <a href="" style="margin: 0 3px;"><i class="ti-instagram text-primary"></i></a>
+            <a href="" style="margin: 0 3px;"><i class="ti-linkedin text-primary"></i></a>
+          </div> -->
         </div>
       </div>
 
@@ -353,12 +373,16 @@
       </div>
       <div class="col-lg-6 col-sm-8">
         <div class="bg-white p-5">
-          <h3 class="section-title"> <span style="color: #ffbc3b;">Absolute </span> Marble & Granite</h3>
-          <address><strong>Address:</strong> 1300 Taylors Lane, Cinnaminson, NJ 08077</address>
-          <address><strong>Tel:</strong> (856) 786-4888</address>
-          <address><strong>Fax:</strong> (856) 829-4888</address>
-          <address><strong>Email:</strong> phan@absolutegranites.com</address>
-          <address><strong>Website:</strong> www.absolutegranites.com</address>
+          <h3 class="section-title">Schedule Appointment</h3>
+          <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+            <script>
+              hbspt.forms.create({
+                region: "na1",
+                portalId: "22675730",
+                formId: "db8ef8bc-b02b-4b34-b5cc-235867435986",
+                version: "V2_PRERELEASE"
+              });
+            </script>
         </div>
       </div>
     </div>
@@ -375,48 +399,53 @@
         <div class="col-lg-4 col-sm-8 mb-5 mb-lg-0">
           <!-- logo -->
           <a class="logo-footer" href="index.html"><img class="img-fluid mb-4" src="images/logo.png" alt="logo"></a>
-          <ul class="list-unstyled">
+          <ul class="list-unstyled text-white">
             <li class="mb-2">1300 Taylors Lane, Cinnaminson, NJ 08077</li>
-            <li class="mb-2"><strong>Tel:</strong> &nbsp;(856) 786-4888</li>
+            <li class="mb-2"><strong>Tel:</strong> &nbsp; <a href="tel:(856) 786-4888">(856) 786-4888</a></li>
             <li class="mb-2"><strong>Fax:</strong> &nbsp;(888) 203-0999</li>
-            <li class="mb-2">phan@absolutegranites.com</li>
+            <li class="mb-2"><a href="mailto:phan@absolutegranites.com">phan@absolutegranites.com</a></li>
           </ul>
         </div>
         <!-- company -->
-        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
-          <h4 class="text-white mb-5">Products</h4>
+        <div class="col-md-2">
+          <h4 class="text-white mb-5">Home</h4>
           <ul class="list-unstyled">
-            <li class="mb-3"><a class="text-color" href="marble.html">Marbles</a></li>
-            <li class="mb-3"><a class="text-color" href="granite.html">Granite</a></li>
-            <li class="mb-3"><a class="text-color" href="quartz.html">Quartz</a></li>
-            <li class="mb-3"><a class="text-color" href="quartzite.html">Quartzite</a></li>
+            <li class="mb-3"><a class="text-color" href="#">Inspiration</a></li>
+            <li class="mb-3"><a class="text-color" href="#">Commercial</a></li>
+            <li class="mb-3"><a class="text-color" href="#">Product</a></li>
+            <li class="mb-3"><a class="text-color" href="#">Gallery</a></li>
+            <li class="mb-3"><a class="text-color" href="#">SelectQuote</a></li>
+            <li class="mb-3"><a class="text-color" href="#">About</a></li>
+            <li class="mb-3"><a class="text-color" href="#">Contact</a></li>
           </ul>
         </div>
         <!-- links -->
-        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
+        <div class="col-md-2 col-sm-4 col-6 mb-5 mb-md-0">
           <h4 class="text-white mb-5">Inspiration</h4>
           <ul class="list-unstyled">
-            <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
-            <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
+            <li class="mb-3"><a class="text-color" href="kitchen.html">Kitchen</a></li>
+            <li class="mb-3"><a class="text-color" href="bathroom.html">Bathroom</a></li>
+            <li class="mb-3"><a class="text-color" href="bar.html">Bar & Entertainment</a></li>
+            <li class="mb-3"><a class="text-color" href="fireplace.html">Fireplace & Outdoor Kitchen</a></li>
+            <li class="mb-3"><a class="text-color" href="boat.html">Boat & Yacht</a></li>
           </ul>
         </div>
-        <!-- support -->
-        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
+        <div class="col-md-2 col-sm-4 col-6 mb-5 mb-md-0">
           <h4 class="text-white mb-5">Commercial</h4>
           <ul class="list-unstyled">
-            <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
-            <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
+            <li class="mb-3"><a class="text-color" href="restaurant.html">Bar & Restaurant</a></li>
+            <li class="mb-3"><a class="text-color" href="hotel.html">Hotel</a></li>
+            <li class="mb-3"><a class="text-color" href="appartment.html">Apartments & Condos</a></li>
+            <li class="mb-3"><a class="text-color" href="office.html">Office & Retail</a></li>
           </ul>
         </div>
-        <!-- support -->
-        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
-          <h4 class="text-white mb-5">Free Estimate</h4>
+        <div class="col-md-2 col-sm-4 col-6 mb-5 mb-md-0">
+          <h4 class="text-white mb-5">Product</h4>
           <ul class="list-unstyled">
-            <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
-            <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
+            <li class="mb-3"><a class="text-color" href="granite.html">Granite</a></li>
+            <li class="mb-3"><a class="text-color" href="quartzite.html">Quartzite</a></li>
+            <li class="mb-3"><a class="text-color" href="marble.html">Marble</a></li>
+            <li class="mb-3"><a class="text-color" href="quartz.html">Quartz</a></li>
           </ul>
         </div>
       </div>
@@ -432,7 +461,7 @@
               var CurrentYear = new Date().getFullYear()
               document.write(CurrentYear)
             </script> 
-            , designed & developed by <a href="http://amoriotech.com/" target="_blank" class="text-muted">Amorio Technologies</a>
+            , designed & developed by <a href="http://amoriotech.com/" target="_blank" class="text-muted text-white">Amorio Technologies</a>
           </p>
           <br>
           <div class="row">
