--- a/gallery.html
+++ b/gallery.html
@@ -75,7 +75,7 @@
   <!-- navbar -->
   <div class="navigation w-100">
     <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-dark p-0">
+      <nav class="navbar navbar-expand-lg navbar-dark p-0" style="background: #1a1a37;">
         <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="220" alt="logo"></a>
         <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navigation"
           aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -470,48 +470,53 @@
         <div class="col-lg-4 col-sm-8 mb-5 mb-lg-0">
           <!-- logo -->
           <a class="logo-footer" href="index.html"><img class="img-fluid mb-4" src="images/logo.png" alt="logo"></a>
-          <ul class="list-unstyled">
+          <ul class="list-unstyled text-white">
             <li class="mb-2">1300 Taylors Lane, Cinnaminson, NJ 08077</li>
-            <li class="mb-2"><strong>Tel:</strong> &nbsp;(856) 786-4888</li>
+            <li class="mb-2"><strong>Tel:</strong> &nbsp; <a href="tel:(856) 786-4888">(856) 786-4888</a></li>
             <li class="mb-2"><strong>Fax:</strong> &nbsp;(888) 203-0999</li>
-            <li class="mb-2">phan@absolutegranites.com</li>
+            <li class="mb-2"><a href="mailto:phan@absolutegranites.com">phan@absolutegranites.com</a></li>
           </ul>
         </div>
         <!-- company -->
-        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
-          <h4 class="text-white mb-5">Products</h4>
+        <div class="col-md-2">
+          <h4 class="text-white mb-5">Home</h4>
           <ul class="list-unstyled">
-            <li class="mb-3"><a class="text-color" href="marble.html">Marbles</a></li>
-            <li class="mb-3"><a class="text-color" href="granite.html">Granite</a></li>
-            <li class="mb-3"><a class="text-color" href="quartz.html">Quartz</a></li>
-            <li class="mb-3"><a class="text-color" href="quartzite.html">Quartzite</a></li>
+            <li class="mb-3"><a class="text-color" href="#">Inspiration</a></li>
+            <li class="mb-3"><a class="text-color" href="#">Commercial</a></li>
+            <li class="mb-3"><a class="text-color" href="#">Product</a></li>
+            <li class="mb-3"><a class="text-color" href="#">Gallery</a></li>
+            <li class="mb-3"><a class="text-color" href="#">SelectQuote</a></li>
+            <li class="mb-3"><a class="text-color" href="#">About</a></li>
+            <li class="mb-3"><a class="text-color" href="#">Contact</a></li>
           </ul>
         </div>
         <!-- links -->
-        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
+        <div class="col-md-2 col-sm-4 col-6 mb-5 mb-md-0">
           <h4 class="text-white mb-5">Inspiration</h4>
           <ul class="list-unstyled">
-            <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
-            <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
+            <li class="mb-3"><a class="text-color" href="kitchen.html">Kitchen</a></li>
+            <li class="mb-3"><a class="text-color" href="bathroom.html">Bathroom</a></li>
+            <li class="mb-3"><a class="text-color" href="bar.html">Bar & Entertainment</a></li>
+            <li class="mb-3"><a class="text-color" href="fireplace.html">Fireplace & Outdoor Kitchen</a></li>
+            <li class="mb-3"><a class="text-color" href="boat.html">Boat & Yacht</a></li>
           </ul>
         </div>
-        <!-- support -->
-        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
+        <div class="col-md-2 col-sm-4 col-6 mb-5 mb-md-0">
           <h4 class="text-white mb-5">Commercial</h4>
           <ul class="list-unstyled">
-            <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
-            <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
+            <li class="mb-3"><a class="text-color" href="restaurant.html">Bar & Restaurant</a></li>
+            <li class="mb-3"><a class="text-color" href="hotel.html">Hotel</a></li>
+            <li class="mb-3"><a class="text-color" href="appartment.html">Apartments & Condos</a></li>
+            <li class="mb-3"><a class="text-color" href="office.html">Office & Retail</a></li>
           </ul>
         </div>
-        <!-- support -->
-        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
-          <h4 class="text-white mb-5">Free Estimate</h4>
+        <div class="col-md-2 col-sm-4 col-6 mb-5 mb-md-0">
+          <h4 class="text-white mb-5">Product</h4>
           <ul class="list-unstyled">
-            <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
-            <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
+            <li class="mb-3"><a class="text-color" href="granite.html">Granite</a></li>
+            <li class="mb-3"><a class="text-color" href="quartzite.html">Quartzite</a></li>
+            <li class="mb-3"><a class="text-color" href="marble.html">Marble</a></li>
+            <li class="mb-3"><a class="text-color" href="quartz.html">Quartz</a></li>
           </ul>
         </div>
       </div>
@@ -527,7 +532,7 @@
               var CurrentYear = new Date().getFullYear()
               document.write(CurrentYear)
             </script> 
-            , designed & developed by <a href="http://amoriotech.com/" target="_blank" class="text-muted">Amorio Technologies</a>
+            , designed & developed by <a href="http://amoriotech.com/" target="_blank" class="text-muted text-white">Amorio Technologies</a>
           </p>
           <br>
           <div class="row">
@@ -541,7 +546,6 @@
           <ul class="list-inline">
             <li class="list-inline-item"><a class="d-inline-block p-2" href="https://facebook.com/"><i class="ti-facebook text-primary"></i></a></li>
             <li class="list-inline-item"><a class="d-inline-block p-2" href="https://twitter.com/"><i class="ti-twitter-alt text-primary"></i></a></li>
-            <li class="list-inline-item"><a class="d-inline-block p-2" href="https://github.com/"><i class="ti-github text-primary"></i></a></li>
             <li class="list-inline-item"><a class="d-inline-block p-2" href="https://instagram.com/"><i class="ti-instagram text-primary"></i></a></li>
           </ul>
         </div>
