--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
   <!-- navbar -->
   <div class="navigation w-100">
     <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-dark p-0">
-        <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="220" alt="logo"></a>
+      <nav class="navbar navbar-expand-lg navbar-dark p-0" style="background: #1a1a37;">
+        <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="250" alt="logo"></a>
         <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navigation"
           aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -347,11 +347,10 @@
             <div class="card p-0 border-primary rounded-0 hover-shadow">
               <img class="card-img-top rounded-0" style="width: 60px; margin-left: 20px; margin-top: 10px;" src="images/granite.jpg" alt="course thumb">
               <div class="card-body">
-                <a href="gallery.html">
+                <a href="granite.html">
                   <h4 class="card-title">Granite</h4>
                 </a>
-                <!-- <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                  incididunt ut labore et dolore magna.</p> -->
+                <p class="card-text mb-4"> Natural stone is a unique and popular countertop material. No two stones are exactly alike. Granite blocks are cut out of quarries and sliced to create slabs; colors are limited to what is found in nature.</p>
               </div>
             </div>
           </div>
@@ -359,11 +358,10 @@
             <div class="card p-0 border-primary rounded-0 hover-shadow">
               <img class="card-img-top rounded-0" style="width: 60px; margin-left: 20px; margin-top: 10px;" src="images/quartzite.jpg" alt="course thumb">
               <div class="card-body">
-                <a href="gallery.html">
+                <a href="quartzite.html">
                   <h4 class="card-title">Quartzite</h4>
                 </a>
-                <!-- <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                  incididunt ut labore et dolore magna.</p> -->
+                <p class="card-text mb-4"> Quartzite is a nonfoliated metamorphic rock composed almost absolutely of quartz. It paperwork while a quartz-rich sandstone is altered via the warmth, pressure, and chemical interest of metamorphism.</p>
               </div>
             </div>
           </div>
@@ -374,11 +372,10 @@
             <div class="card p-0 border-primary rounded-0 hover-shadow">
               <img class="card-img-top rounded-0" style="width: 60px; margin-left: 20px; margin-top: 10px;" src="images/marble.jpg" alt="course thumb">
               <div class="card-body">
-                <a href="gallery.html">
+                <a href="marble.html">
                   <h4 class="card-title">Marbles</h4>
                 </a>
-                <!-- <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                  incididunt ut labore et dolore magna.</p> -->
+                <p class="card-text mb-4"> You can use marble in the kitchen, as long as you are prepared to commit a little more diligence when it comes to upkeep, or a perspective shift. Each slab is unique and there’s a great deal of variation from one segment to the next, so every marble countertop, backsplash, and tabletop is truly one-of-a-kind. And in the case of the classic white marble, the bright shade gives the kitchen a fresh, clean sparkle and can brighten up a space with less natural light.</p>
               </div>
             </div>
           </div>
@@ -386,11 +383,10 @@
             <div class="card p-0 border-primary rounded-0 hover-shadow">
               <img class="card-img-top rounded-0" style="width: 60px; margin-left: 20px; margin-top: 10px;" src="images/quartz.jpg" alt="course thumb">
               <div class="card-body">
-                <a href="gallery.html">
+                <a href="quartz.html">
                   <h4 class="card-title">Quartz</h4>
                 </a>
-                <!-- <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                  incididunt ut labore et dolore magna.</p> -->
+                <p class="card-text mb-4"> One of the strongest materials around. Quartz minerals are mixed with resin and laid out to form slabs. Unlike granite, quartz is non porous, stain resistant, heat resistant, and impact resistant.</p>
               </div>
             </div>
           </div>
@@ -507,48 +503,53 @@
         <div class="col-lg-4 col-sm-8 mb-5 mb-lg-0">
           <!-- logo -->
           <a class="logo-footer" href="index.html"><img class="img-fluid mb-4" src="images/logo.png" alt="logo"></a>
-          <ul class="list-unstyled">
+          <ul class="list-unstyled text-white">
             <li class="mb-2">1300 Taylors Lane, Cinnaminson, NJ 08077</li>
-            <li class="mb-2"><strong>Tel:</strong> &nbsp;(856) 786-4888</li>
+            <li class="mb-2"><strong>Tel:</strong> &nbsp; <a href="tel:(856) 786-4888">(856) 786-4888</a></li>
             <li class="mb-2"><strong>Fax:</strong> &nbsp;(888) 203-0999</li>
-            <li class="mb-2">phan@absolutegranites.com</li>
+            <li class="mb-2"><a href="mailto:phan@absolutegranites.com">phan@absolutegranites.com</a></li>
           </ul>
         </div>
         <!-- company -->
-        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
-          <h4 class="text-white mb-5">Products</h4>
+        <div class="col-md-2">
+          <h4 class="text-white mb-5">Home</h4>
           <ul class="list-unstyled">
-            <li class="mb-3"><a class="text-color" href="marble.html">Marbles</a></li>
-            <li class="mb-3"><a class="text-color" href="granite.html">Granite</a></li>
-            <li class="mb-3"><a class="text-color" href="quartz.html">Quartz</a></li>
-            <li class="mb-3"><a class="text-color" href="quartzite.html">Quartzite</a></li>
+            <li class="mb-3"><a class="text-color" href="#">Inspiration</a></li>
+            <li class="mb-3"><a class="text-color" href="#">Commercial</a></li>
+            <li class="mb-3"><a class="text-color" href="#">Product</a></li>
+            <li class="mb-3"><a class="text-color" href="#">Gallery</a></li>
+            <li class="mb-3"><a class="text-color" href="#">SelectQuote</a></li>
+            <li class="mb-3"><a class="text-color" href="#">About</a></li>
+            <li class="mb-3"><a class="text-color" href="#">Contact</a></li>
           </ul>
         </div>
         <!-- links -->
-        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
+        <div class="col-md-2 col-sm-4 col-6 mb-5 mb-md-0">
           <h4 class="text-white mb-5">Inspiration</h4>
           <ul class="list-unstyled">
-            <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
-            <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
+            <li class="mb-3"><a class="text-color" href="kitchen.html">Kitchen</a></li>
+            <li class="mb-3"><a class="text-color" href="bathroom.html">Bathroom</a></li>
+            <li class="mb-3"><a class="text-color" href="bar.html">Bar & Entertainment</a></li>
+            <li class="mb-3"><a class="text-color" href="fireplace.html">Fireplace & Outdoor Kitchen</a></li>
+            <li class="mb-3"><a class="text-color" href="boat.html">Boat & Yacht</a></li>
           </ul>
         </div>
-        <!-- support -->
-        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
+        <div class="col-md-2 col-sm-4 col-6 mb-5 mb-md-0">
           <h4 class="text-white mb-5">Commercial</h4>
           <ul class="list-unstyled">
-            <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
-            <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
+            <li class="mb-3"><a class="text-color" href="restaurant.html">Bar & Restaurant</a></li>
+            <li class="mb-3"><a class="text-color" href="hotel.html">Hotel</a></li>
+            <li class="mb-3"><a class="text-color" href="appartment.html">Apartments & Condos</a></li>
+            <li class="mb-3"><a class="text-color" href="office.html">Office & Retail</a></li>
           </ul>
         </div>
-        <!-- support -->
-        <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
-          <h4 class="text-white mb-5">Free Estimate</h4>
+        <div class="col-md-2 col-sm-4 col-6 mb-5 mb-md-0">
+          <h4 class="text-white mb-5">Product</h4>
           <ul class="list-unstyled">
-            <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
-            <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
+            <li class="mb-3"><a class="text-color" href="granite.html">Granite</a></li>
+            <li class="mb-3"><a class="text-color" href="quartzite.html">Quartzite</a></li>
+            <li class="mb-3"><a class="text-color" href="marble.html">Marble</a></li>
+            <li class="mb-3"><a class="text-color" href="quartz.html">Quartz</a></li>
           </ul>
         </div>
       </div>
@@ -564,7 +565,7 @@
               var CurrentYear = new Date().getFullYear()
               document.write(CurrentYear)
             </script> 
-            , designed & developed by <a href="http://amoriotech.com/" target="_blank" class="text-muted">Amorio Technologies</a>
+            , designed & developed by <a href="http://amoriotech.com/" target="_blank" class="text-muted text-white">Amorio Technologies</a>
           </p>
           <br>
           <div class="row">
