--- a/select_quote.html
+++ b/select_quote.html
@@ -104,7 +104,7 @@
       <!-- navbar -->
       <div class="navigation w-100">
         <div class="container">
-          <nav class="navbar navbar-expand-lg navbar-dark p-0">
+          <nav class="navbar navbar-expand-lg navbar-dark p-0" style="background: #1a1a37;">
             <a class="navbar-brand" href="index.html"
               ><img src="images/logo.png" width="220" alt="logo"
             /></a>
@@ -776,77 +776,54 @@
           <div class="row">
             <div class="col-lg-4 col-sm-8 mb-5 mb-lg-0">
               <!-- logo -->
-              <a class="logo-footer" href="index.html"
-                ><img class="img-fluid mb-4" src="images/logo.png" alt="logo"
-              /></a>
-              <ul class="list-unstyled">
+              <a class="logo-footer" href="index.html"><img class="img-fluid mb-4" src="images/logo.png" alt="logo"></a>
+              <ul class="list-unstyled text-white">
                 <li class="mb-2">1300 Taylors Lane, Cinnaminson, NJ 08077</li>
-                <li class="mb-2"><strong>Tel:</strong> &nbsp;(856) 786-4888</li>
+                <li class="mb-2"><strong>Tel:</strong> &nbsp; <a href="tel:(856) 786-4888">(856) 786-4888</a></li>
                 <li class="mb-2"><strong>Fax:</strong> &nbsp;(888) 203-0999</li>
-                <li class="mb-2">phan@absolutegranites.com</li>
+                <li class="mb-2"><a href="mailto:phan@absolutegranites.com">phan@absolutegranites.com</a></li>
               </ul>
             </div>
             <!-- company -->
-            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
-              <h4 class="text-white mb-5">Products</h4>
+            <div class="col-md-2">
+              <h4 class="text-white mb-5">Home</h4>
               <ul class="list-unstyled">
-                <li class="mb-3">
-                  <a class="text-color" href="marble.html">Marbles</a>
-                </li>
-                <li class="mb-3">
-                  <a class="text-color" href="granite.html">Granite</a>
-                </li>
-                <li class="mb-3">
-                  <a class="text-color" href="quartz.html">Quartz</a>
-                </li>
-                <li class="mb-3">
-                  <a class="text-color" href="quartzite.html">Quartzite</a>
-                </li>
+                <li class="mb-3"><a class="text-color" href="#">Inspiration</a></li>
+                <li class="mb-3"><a class="text-color" href="#">Commercial</a></li>
+                <li class="mb-3"><a class="text-color" href="#">Product</a></li>
+                <li class="mb-3"><a class="text-color" href="#">Gallery</a></li>
+                <li class="mb-3"><a class="text-color" href="#">SelectQuote</a></li>
+                <li class="mb-3"><a class="text-color" href="#">About</a></li>
+                <li class="mb-3"><a class="text-color" href="#">Contact</a></li>
               </ul>
             </div>
             <!-- links -->
-            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
+            <div class="col-md-2 col-sm-4 col-6 mb-5 mb-md-0">
               <h4 class="text-white mb-5">Inspiration</h4>
               <ul class="list-unstyled">
-                <li class="mb-3">
-                  <a class="text-color" href="about.html">About Us</a>
-                </li>
-                <li class="mb-3">
-                  <a class="text-color" href="product.html">Product</a>
-                </li>
-                <li class="mb-3">
-                  <a class="text-color" href="contact.html">Contact</a>
-                </li>
+                <li class="mb-3"><a class="text-color" href="kitchen.html">Kitchen</a></li>
+                <li class="mb-3"><a class="text-color" href="bathroom.html">Bathroom</a></li>
+                <li class="mb-3"><a class="text-color" href="bar.html">Bar & Entertainment</a></li>
+                <li class="mb-3"><a class="text-color" href="fireplace.html">Fireplace & Outdoor Kitchen</a></li>
+                <li class="mb-3"><a class="text-color" href="boat.html">Boat & Yacht</a></li>
               </ul>
             </div>
-            <!-- support -->
-            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
+            <div class="col-md-2 col-sm-4 col-6 mb-5 mb-md-0">
               <h4 class="text-white mb-5">Commercial</h4>
               <ul class="list-unstyled">
-                <li class="mb-3">
-                  <a class="text-color" href="about.html">About Us</a>
-                </li>
-                <li class="mb-3">
-                  <a class="text-color" href="product.html">Product</a>
-                </li>
-                <li class="mb-3">
-                  <a class="text-color" href="contact.html">Contact</a>
-                </li>
+                <li class="mb-3"><a class="text-color" href="restaurant.html">Bar & Restaurant</a></li>
+                <li class="mb-3"><a class="text-color" href="hotel.html">Hotel</a></li>
+                <li class="mb-3"><a class="text-color" href="appartment.html">Apartments & Condos</a></li>
+                <li class="mb-3"><a class="text-color" href="office.html">Office & Retail</a></li>
               </ul>
             </div>
-            <!-- support -->
-            <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
-              <h4 class="text-white mb-5">Free Estimate</h4>
+            <div class="col-md-2 col-sm-4 col-6 mb-5 mb-md-0">
+              <h4 class="text-white mb-5">Product</h4>
               <ul class="list-unstyled">
-                <li class="mb-3">
-                  <a class="text-color" href="about.html">About Us</a>
-                </li>
-                <li class="mb-3">
-                  <a class="text-color" href="product.html">Product</a>
-                </li>
-                <li class="mb-3">
-                  <a class="text-color" href="contact.html">Contact</a>
-                </li>
+                <li class="mb-3"><a class="text-color" href="granite.html">Granite</a></li>
+                <li class="mb-3"><a class="text-color" href="quartzite.html">Quartzite</a></li>
+                <li class="mb-3"><a class="text-color" href="marble.html">Marble</a></li>
+                <li class="mb-3"><a class="text-color" href="quartz.html">Quartz</a></li>
               </ul>
             </div>
           </div>
@@ -857,61 +834,26 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-7 text-sm-left text-center">
-              <p class="mb-0">
-                Copyright &copy;
+              <p class="mb-0">Copyright &copy;
                 <script>
-                  var CurrentYear = new Date().getFullYear();
-                  document.write(CurrentYear);
-                </script>
-                , designed & developed by
-                <a
-                  href="http://amoriotech.com/"
-                  target="_blank"
-                  class="text-muted"
-                  >Amorio Technologies</a
-                >
+                  var CurrentYear = new Date().getFullYear()
+                  document.write(CurrentYear)
+                </script> 
+                , designed & developed by <a href="http://amoriotech.com/" target="_blank" class="text-muted text-white">Amorio Technologies</a>
               </p>
-              <br />
+              <br>
               <div class="row">
                 <div class="col-md-6">
-                  <a
-                    href="privacy_policy.html"
-                    class="text-muted"
-                    style="font-size: 11px"
-                    >Privacy Policy</a
-                  >
-                  &nbsp;
-                  <a
-                    href="terms_use.html"
-                    class="text-muted"
-                    style="font-size: 11px"
-                    >Terms of Use</a
-                  >
+                  <a href="privacy_policy.html" class="text-muted" style="font-size: 11px;">Privacy Policy</a> &nbsp;
+                  <a href="terms_use.html" class="text-muted" style="font-size: 11px;">Terms of Use</a>
                 </div>
               </div>
             </div>
             <div class="col-sm-5 text-sm-right text-center">
               <ul class="list-inline">
-                <li class="list-inline-item">
-                  <a class="d-inline-block p-2" href="https://facebook.com/"
-                    ><i class="ti-facebook text-primary"></i
-                  ></a>
-                </li>
-                <li class="list-inline-item">
-                  <a class="d-inline-block p-2" href="https://twitter.com/"
-                    ><i class="ti-twitter-alt text-primary"></i
-                  ></a>
-                </li>
-                <li class="list-inline-item">
-                  <a class="d-inline-block p-2" href="https://github.com/"
-                    ><i class="ti-github text-primary"></i
-                  ></a>
-                </li>
-                <li class="list-inline-item">
-                  <a class="d-inline-block p-2" href="https://instagram.com/"
-                    ><i class="ti-instagram text-primary"></i
-                  ></a>
-                </li>
+                <li class="list-inline-item"><a class="d-inline-block p-2" href="https://facebook.com/"><i class="ti-facebook text-primary"></i></a></li>
+                <li class="list-inline-item"><a class="d-inline-block p-2" href="https://twitter.com/"><i class="ti-twitter-alt text-primary"></i></a></li>
+                <li class="list-inline-item"><a class="d-inline-block p-2" href="https://instagram.com/"><i class="ti-instagram text-primary"></i></a></li>
               </ul>
             </div>
           </div>
