--- a/granite.html
+++ b/granite.html
@@ -72,8 +72,8 @@
   <!-- navbar -->
   <div class="navigation w-100">
     <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-dark p-0" style="background: #1a1a37;">
-        <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="220" alt="logo"></a>
+      <nav class="navbar navbar-expand-lg navbar-dark p-0">
+        <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="178" alt="logo"></a>
         <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navigation"
           aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -233,7 +233,9 @@
 <!-- courses -->
 <section class="section">
   <div class="container">
+    <p style="text-align:center;">Natural stone is a unique and popular countertop material. No two stones are exactly alike. Granite blocks are cut out of quarries and sliced to create slabs; colors are limited to what is found in nature.</p>
     <!-- course list -->
+    <br>
 <div class="row justify-content-center">
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
