--- a/select_quote.html
+++ b/select_quote.html
@@ -104,9 +104,9 @@
       <!-- navbar -->
       <div class="navigation w-100">
         <div class="container">
-          <nav class="navbar navbar-expand-lg navbar-dark p-0" style="background: #1a1a37;">
+          <nav class="navbar navbar-expand-lg navbar-dark p-0">
             <a class="navbar-brand" href="index.html"
-              ><img src="images/logo.png" width="220" alt="logo"
+              ><img src="images/logo.png" width="178" alt="logo"
             /></a>
             <button
               class="navbar-toggler rounded-0"
