--- a/marble.html
+++ b/marble.html
@@ -233,7 +233,9 @@
 <!-- courses -->
 <section class="section">
   <div class="container">
+    <p style="text-align: center;">You can use marble in the kitchen, as long as you are prepared to commit a little more diligence when it comes to upkeep, or a perspective shift. Each slab is unique and there’s a great deal of variation from one segment to the next, so every marble countertop, backsplash, and tabletop is truly one-of-a-kind. And in the case of the classic white marble, the bright shade gives the kitchen a fresh, clean sparkle and can brighten up a space with less natural light.</p>
     <!-- course list -->
+    <br>
 <div class="row justify-content-center">
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
