--- a/quartzite.html
+++ b/quartzite.html
@@ -233,6 +233,8 @@
 <!-- courses -->
 <section class="section">
   <div class="container">
+    <p style="text-align:center;">Quartzite is a nonfoliated metamorphic rock composed almost absolutely of quartz. It paperwork while a quartz-rich sandstone is altered via the warmth, pressure, and chemical interest of metamorphism.</p>
+    <br>
     <!-- course list -->
 <div class="row justify-content-center">
   <!-- course item -->
