--- a/qpremium_quartz.html
+++ b/qpremium_quartz.html
@@ -71,7 +71,7 @@
   <!-- navbar -->
   <div class="navigation w-100">
     <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-dark p-0">
+      <nav class="navbar navbar-expand-lg navbar-dark p-0" style="background-color: #fff;">
         <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="178" alt="logo"></a>
         <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navigation"
           aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
