--- a/select_quote.html
+++ b/select_quote.html
@@ -104,7 +104,7 @@
       <!-- navbar -->
       <div class="navigation w-100">
         <div class="container">
-          <nav class="navbar navbar-expand-lg navbar-dark p-0">
+          <nav class="navbar navbar-expand-lg navbar-dark p-0" style="background-color: #fff;">
             <a class="navbar-brand" href="index.html"
               ><img src="images/logo.png" width="178" alt="logo"
             /></a>
