--- a/select_quote.html
+++ b/select_quote.html
@@ -476,33 +476,33 @@
               granite countertop, granite table tops, fireplace , granite
               jacuzzi, granite hearths, granite vanities or granite bar tops.
             </p>
-            <form action="" method="POST">
+            <form action="quote.php" method="POST">
               <div class="row">
                 <img src="images/kitchen-layout.png" alt="" />
                 <div class="col-md-3" style="text-align: center">
                   <br />
-                  <input type="checkbox" name="layout_1" id="layout_1" /><span
+                  <input type="checkbox" name="layout_view" value="layout_1" id="layout_view" /><span
                     style="vertical-align: text-top"
                     >&nbsp;Kitchen Layout #1</span
                   >
                 </div>
                 <div class="col-md-3" style="text-align: center">
                   <br />
-                  <input type="checkbox" name="layout_2" id="layout_2" /><span
+                  <input type="checkbox" name="layout_view" value="layout_2" id="layout_view" /><span
                     style="vertical-align: text-top"
                     >&nbsp;Kitchen Layout #2</span
                   >
                 </div>
                 <div class="col-md-3" style="text-align: center">
                   <br />
-                  <input type="checkbox" name="layout_3" id="layout_3" /><span
+                  <input type="checkbox" name="layout_view" value="layout_3" id="layout_view" /><span
                     style="vertical-align: text-top"
                     >&nbsp;Kitchen Layout #3</span
                   >
                 </div>
                 <div class="col-md-3" style="text-align: center">
                   <br />
-                  <input type="checkbox" name="layout_4" id="layout_4" /><span
+                  <input type="checkbox" name="layout_view" value="layout_4" id="layout_view" /><span
                     style="vertical-align: text-top"
                     >&nbsp;Kitchen Layout #4</span
                   >
@@ -634,9 +634,9 @@
                   <label for="">Luxury Edge:</label>
                   <br />
                   <select
-                    name="popular_edge"
+                    name="luxury_edge"
                     class="form-control"
-                    id="popular_edge"
+                    id="luxury_edge"
                   >
                     <option>Select One</option>
                     <option value="straight_laminaded">
@@ -665,9 +665,9 @@
                   <label for="">Cut outs:</label>
                   <br />
                   <select
-                    name="popular_edge"
+                    name="cut_outs"
                     class="form-control"
-                    id="popular_edge"
+                    id="cut_outs"
                   >
                     <option>Select One</option>
                     <option value="kitchen_sink">
