--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="col-lg-4 text-center text-lg-right">
           <div class="search-container">
             <form action="">
-              <input type="text" placeholder="Search.." name="search">
+              <input type="text" placeholder="Search....." name="search" id="search">
               <button type="submit"><i class="fa fa-search"></i></button>
             </form>
           </div>
@@ -205,7 +205,7 @@
                             <input type="password" class="form-control mb-3" id="signupPassword" name="signupPassword" placeholder="Password">
                         </div>
                         <div class="col-12">
-                            <button type="submit" class="btn btn-primary">SIGN UP</button>
+                            <button type="submit" class="btn btn-primary">Sign Up</button>
                         </div>
                     </form>
                 </div>
@@ -235,7 +235,7 @@
                         <input type="password" class="form-control mb-3" id="loginPassword" name="loginPassword" placeholder="Password">
                     </div>
                     <div class="col-12">
-                        <button type="submit" class="btn btn-primary">LOGIN</button>
+                        <button type="submit" class="btn btn-primary">Login</button>
                     </div>
                 </form>
             </div>
@@ -571,7 +571,8 @@
           <div class="row">
             <div class="col-md-6">
               <a href="privacy_policy.html" class="text-muted" style="font-size: 11px;">Privacy Policy</a> &nbsp;
-              <a href="terms_use.html" class="text-muted" style="font-size: 11px;">Terms of Use</a>
+              <a href="terms_use.html" class="text-muted" style="font-size: 11px;">Terms of Use</a> &nbsp;
+              <!-- <a href="sitemap.html" class="text-muted" style="font-size: 11px;">Site Map</a> -->
             </div>
           </div>
         </div>
