--- a/select_quote.html
+++ b/select_quote.html
@@ -776,7 +776,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-8 mb-5 mb-lg-0">
               <!-- logo -->
-              <a class="logo-footer" href="index.html"><img class="img-fluid mb-4" src="images/logo.png" alt="logo"></a>
+              <a class="logo-footer" href="index.html"><img class="img-fluid mb-4" src="images/logo.png" width="178" alt="logo"></a>
               <ul class="list-unstyled text-white">
                 <li class="mb-2">1300 Taylors Lane, Cinnaminson, NJ 08077</li>
                 <li class="mb-2"><strong>Tel:</strong> &nbsp; <a href="tel:(856) 786-4888">(856) 786-4888</a></li>
@@ -890,5 +890,11 @@
       src="//js-na1.hs-scripts.com/22675730.js"
     ></script>
     <!-- End of HubSpot Embed Code -->
+
+    <!-- <style>
+      input[type="checkbox"]{
+        color: #ffbc3b !important;
+      }
+    </style> -->
   </body>
 </html>
