--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="col-lg-4 text-center text-lg-right">
           <div class="search-container">
             <form action="">
-              <input type="text" placeholder="Search....." name="search" id="search">
+              <input type="text" placeholder="Search....." onkeyup="search_words()" name="search" id="searchbar">
               <button type="submit"><i class="fa fa-search"></i></button>
             </form>
           </div>
@@ -618,8 +618,10 @@
   }
 </style>
 
+
+
 <!-- Start of HubSpot Embed Code -->
-  <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/22675730.js"></script>
+<script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/22729667.js"></script>
 <!-- End of HubSpot Embed Code -->
 </body>
 </html>
