--- a/granite.html
+++ b/granite.html
@@ -61,7 +61,7 @@
         <div class="col-lg-4 text-center text-lg-right">
           <div class="search-container">
             <form action="">
-              <input type="text" placeholder="Search.." name="search">
+              <input type="text" placeholder="Search.." onkeyup="search_words()" id="searchbar" name="searchbar">
               <button type="submit"><i class="fa fa-search"></i></button>
             </form>
           </div>
@@ -254,7 +254,7 @@
       <img class="card-img-top rounded-0" src="images/granite/2.jpg" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
-          <h4 class="card-title">African Rainbow</h4>
+          <h4 class="card-title products">African Rainbow</h4>
         </a>
       </div>
     </div>
@@ -265,7 +265,7 @@
       <img class="card-img-top rounded-0" src="images/granite/3.jpg" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
-          <h4 class="card-title">Alaska White</h4>
+          <h4 class="card-title products">Alaska White</h4>
         </a>
       </div>
     </div>
@@ -276,7 +276,7 @@
       <img class="card-img-top rounded-0" src="images/granite/4.jpg" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
-          <h4 class="card-title">Almond Gold</h4>
+          <h4 class="card-title products">Almond Gold</h4>
         </a>
       </div>
     </div>
@@ -287,7 +287,7 @@
       <img class="card-img-top rounded-0" src="images/granite/5.jpg" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
-          <h4 class="card-title">Absolute Black</h4>
+          <h4 class="card-title products">Absolute Black</h4>
         </a>
       </div>
     </div>
@@ -410,7 +410,7 @@
 <script src="js/script.js"></script>
 
 <!-- Start of HubSpot Embed Code -->
-  <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/22675730.js"></script>
+<script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/22729667.js"></script>
 <!-- End of HubSpot Embed Code -->
 
 <style>
@@ -421,6 +421,24 @@ img:hover {
   transform: scale(1.5);
 }
 </style>
+
+<script>
+  function search_words() {
+    let input = document.getElementById('searchbar').value
+    // alert(input);
+    input=input.toLowerCase();
+    let x = document.getElementsByClassName('products');
+      
+    for (i = 0; i < x.length; i++) { 
+        if (!x[i].innerHTML.toLowerCase().includes(input)) {
+          x[i].style.display="none";
+        }
+        else {
+          x[i].style.display="block";                 
+        }
+    }
+}
+</script>
 
 </body>
 </html>
