--- a/select_quote.html
+++ b/select_quote.html
@@ -881,15 +881,9 @@
     <!-- Main Script -->
     <script src="js/script.js"></script>
 
-    <!-- Start of HubSpot Embed Code -->
-    <script
-      type="text/javascript"
-      id="hs-script-loader"
-      async
-      defer
-      src="//js-na1.hs-scripts.com/22675730.js"
-    ></script>
-    <!-- End of HubSpot Embed Code -->
+<!-- Start of HubSpot Embed Code -->
+<script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/22729667.js"></script>
+<!-- End of HubSpot Embed Code -->
 
     <!-- <style>
       input[type="checkbox"]{
